--- a/proj3/index.html
+++ b/proj3/index.html
@@ -73,9 +73,9 @@
     <div class="image-container">
         <figure>
             <img src="morph.gif">
-            <figcaption>The 45 frames of my face morphing to my sister's face.</figcaption>
+            <figcaption>The 90 frames of my face morphing to my sister's face.</figcaption>
         </figure>
-        <p>I then set up the ability to warp and cross-dissolve with different values, setting the value that you warp onto my face/my sister's face to be (1 - warp_frac)*my_points + warp_frac*(my_sister's_points) and setting the resulting cross-dissolved image to be (dissolve_frac)*my_face + (1 - dissolve_frac)*my_sister's_face. I then incremented both warp_frac and dissolve_frac on the same time from 0 to 1 and iterated over my morphing function in order to then generate 45 frames of my face morphing into my sister's face, then combined them into a gif. The gif is visible above. Note that it only plays once on each load of the page, so to get it to play, open it again in the new tab and scroll to the gif and you will be able to see it. </p>
+        <p>I then set up the ability to warp and cross-dissolve with different values, setting the value that you warp onto my face/my sister's face to be (1 - warp_frac)*my_points + warp_frac*(my_sister's_points) and setting the resulting cross-dissolved image to be (dissolve_frac)*my_face + (1 - dissolve_frac)*my_sister's_face. I then incremented both warp_frac and dissolve_frac on the same time from 0 to 1 and iterated over my morphing function in order to then generate 90 frames of my face morphing into my sister's face, then combined them into a gif. I chose to use 90 instead of 45 frames as it looked nicer to be slower to me. The gif is visible above. Note that it only plays once on each load of the page, so to get it to play, open it again in the new tab and scroll to the gif and you will be able to see it. </p>
     </div>
 
     <div class="image-container">
