--- a/proj3/index.html
+++ b/proj3/index.html
@@ -80,7 +80,7 @@
 
     <div class="image-container">
         <figure>
-            <img src="average_danish.png">
+            <img src="average_danish2.png">
             <figcaption>The average danish face.</figcaption>
         </figure>
         <p>After that, the next goal was to compute the "average" face from a dataset. I chose the Dane's dataset, computed the average face shape by averaging all the images, then warped that onto each face and averaged these warps together to get the resulting average Danish face.</p>
@@ -88,7 +88,7 @@
 
     <div class="image-container">
         <figure>
-            <img src="danishes.png">
+            <img src="danishes2.png">
             <figcaption>Different danishes warped onto mid image.</figcaption>
         </figure>
         <p>I then computed for the first 16 images in the dataset, their faces warped onto this average face, which you can see here. The computation just used the same work above of warping with the affine transform, polygon function, and interpolation.</p>
