--- a/proj4/index.html
+++ b/proj4/index.html
@@ -113,7 +113,15 @@
 
     <p> In Part B of the Project, we now follow the paper “Multi-Image Matching using Multi-Scale Oriented Patches” by Brown et al. This allows us to do automatic blending, instead of having to rely on manually clicking on points in the images and matching them up. The coolest thing I learned from this project was how to use ANMS to pick the corners that were key to the image -- oftentimes these corresponded to the corners that I had manually chosen, and sometimes they didn't, and it was cool seeing how the algorithm decides which corner to pick based on the relative strengths of pairs of coordinates. I hadn't really thought of this kind of approach before, and it was pretty cool to implement it in order to find the corners that were more evenly spaced out that provided good corners to compare across images. </p>
 
-    <h2> Harris Interest Point Detector </h2>
+    <h2> Detecting Corner Features in an Image </h2>
+
+    <h2> Extracting a Feature Descriptor for each Feature Point </h2>
+
+    <h2> Matching these Feature Descriptors between Two Images </h2>
+
+    <h2> Use RANSAC to Compute a Homography </h2>
+
+    <h2> Produce a Mosaic </h2>
 
     <!-- code for how to do side by side -->
     <!-- <div class="image-container">
