test side by side images

--- a/proj4/index.html
+++ b/proj4/index.html
@@ -123,18 +123,57 @@
 
     <h2> Produce a Mosaic </h2>
 
-    <!-- code for how to do side by side -->
-    <!-- <div class="image-container">
+    <div class="image-container">
         <div class="side-by-side">
             <figure>
-                <img src="csua_board.png">
-                <figcaption>A whiteboard/reading area in the CSUA.</figcaption>
+                <img src="bair_wall_manual.png">
+                <figcaption>The BWW wall with manually selected points.</figcaption>
             </figure>
             <figure>
-                <img src="csua_box.png">
-                <figcaption>Next to the whiteboard area, the little side table in the CSUA. Can you tell I spend a lot of time in the CSUA?</figcaption>
+                <img src="bair_wall_auto.png">
+                <figcaption>The BWW wall with automatically selected points.</figcaption>
             </figure>
         </div>
-    </div> -->
+    </div>
+    
+    <div class="image-container">
+        <div class="side-by-side">
+            <figure>
+                <img src="csua_board_manual.png">
+                <figcaption>The CSUA whiteboard with manually selected points.</figcaption>
+            </figure>
+            <figure>
+                <img src="csua_board_auto.png">
+                <figcaption>The CSUA whiteboard with automatically selected points.</figcaption>
+            </figure>
+        </div>
+    </div>
+
+    <div class="image-container">
+        <div class="side-by-side">
+            <figure>
+                <img src="csua_box_manual.png">
+                <figcaption>The CSUA box with manually selected points.</figcaption>
+            </figure>
+            <figure>
+                <img src="csua_box_auto.png">
+                <figcaption>The CSUA box with automatically selected points.</figcaption>
+            </figure>
+        </div>
+    </div>
+
+    <div class="image-container">
+        <div class="side-by-side">
+            <figure>
+                <img src="csua_chair_manual.png">
+                <figcaption>The CSUA back TV area with manually selected points.</figcaption>
+            </figure>
+            <figure>
+                <img src="csua_chair_auto.png">
+                <figcaption>The CSUA back TV area with automatically selected points.</figcaption>
+            </figure>
+        </div>
+    </div>
+
 </body>
 </html>
