--- a/proj4/index.html
+++ b/proj4/index.html
@@ -124,7 +124,7 @@
                 <figcaption>The Harris Corners on the left BWW image.</figcaption>
             </figure>
             <figure>
-                <img src="bair_wall_auto.png">
+                <img src="harriscorners2.png">
                 <figcaption>The Harris Corners on the right BWW image.</figcaption>
             </figure>
         </div>
@@ -135,11 +135,11 @@
     <div class="image-container">
         <div class="side-by-side">
             <figure>
-                <img src="bair_amns.png">
+                <img src="bair_anms.png">
                 <figcaption>The AMNS Corners on the left BWW image.</figcaption>
             </figure>
             <figure>
-                <img src="bair_amns_2.png">
+                <img src="bair_anms_2.png">
                 <figcaption>The AMNS Corners on the right BWW image.</figcaption>
             </figure>
         </div>
