--- a/proj5/index.html
+++ b/proj5/index.html
@@ -161,7 +161,7 @@
 
     <div class="image-container">
         <figure>
-            <img src="im2im_2.png">
+            <img src="im2im_3.png">
             <figcaption> Image to image translation with an image of a random couple off Pinterest because that's the only pinimg link I could find. Using starting index [1, 3, 5, 7, 10, 20]. This does a lot better than the cat. The bottom image is the original image, rest are at each time step. </figcaption>
         </figure>
     </div>
@@ -186,7 +186,7 @@
 
     <div class="image-container">
         <figure>
-            <img src="envelope.png">
+            <img src="heart.png">
             <figcaption> I hand drew a heart, and the last image looks a lot like it, but I thought it was kind of funny that second to last looks more like a lightbulb. </figcaption>
         </figure>
     </div>
